--- a/ouroboros-consensus-diffusion/ouroboros-consensus-diffusion.cabal
+++ b/ouroboros-consensus-diffusion/ouroboros-consensus-diffusion.cabal
@@ -67,10 +67,10 @@ library
     , Ouroboros.Consensus.Node.NetworkProtocolVersion
 
   build-depends:
-    , base                         >=4.14    && <4.19
-    , bytestring                   >=0.10    && <0.12
+    , base                         >=4.14   && <4.19
+    , bytestring                   >=0.10   && <0.12
     , cborg                        ^>=0.2.2
-    , containers                   >=0.5     && <0.7
+    , containers                   >=0.5    && <0.7
     , contra-tracer
     , deepseq
     , filepath
@@ -79,10 +79,10 @@ library
     , io-classes                   ^>=1.3
     , mtl
     , ouroboros-consensus          ^>=0.14
-    , ouroboros-network            ^>=0.10.0
-    , ouroboros-network-api        ^>=0.6.0
-    , ouroboros-network-framework  ^>=0.10
-    , ouroboros-network-protocols  ^>=0.6.0
+    , ouroboros-network
+    , ouroboros-network-api
+    , ouroboros-network-framework
+    , ouroboros-network-protocols
     , random
     , serialise                    ^>=0.2
     , si-timers                    ^>=1.3
